Adapted gulp file, fixed clean error, added images, set up basic getJSON js

--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Player Stats Component</title>
+    <link rel="stylesheet" href="/css/main.css">
+    <script src="/js/vendor.js" charset="utf-8"></script>
+    <script src="/js/playerStats.js" charset="utf-8"></script>
   </head>
   <body>
     <div class="statsComponent" id="stats1">
       <div class="card">
-        <img src="/images/players/toby-aldweireld.png" alt="toby alderweireld" />
+        <img src="/images/players/p4916.png" alt="toby alderweireld" />
         <select class="playerSelector" name="playerSelect">
           <option value="4916">Toby Alderweireld</option>
         </select>
         <div class="playerTeamLogo">
-          <img src="/images/teams/tottenhamHotspur.png" alt="Tottenham Hotspur" />
+          <img src="/images/teams/t21.png" alt="Tottenham Hotspur" />
         </div>
         <div class="playerContent">
           <h1>Toby Alderweireld</h1>
