Added styling. Adapted JS to appease IE (Replace forEach > for loops

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,14 @@
   <body>
     <div class="statsComponent" id="stats1">
       <div class="card">
-        <img src="/images/players/p4916.png" alt="toby alderweireld" />
-        <select class="playerSelector" name="playerSelect">
-          <option value="4916">Toby Alderweireld</option>
-        </select>
-        <div class="playerTeamLogo">
-          <img src="/images/teams/t21.png" alt="Tottenham Hotspur" />
+        <div class="playerProfile">
+          <select class="playerSelector" name="playerSelect">
+            <option value="4916">Toby Alderweireld</option>
+          </select>
+          <img src="/images/players/p4916.png" alt="toby alderweireld" />
+          <div class="playerTeamLogo">
+            <img src="/images/teams/t21.png" alt="Tottenham Hotspur" />
+          </div>
         </div>
         <div class="playerContent">
           <h1>Toby Alderweireld</h1>
